--- a/test.html
+++ b/test.html
@@ -23,14 +23,18 @@
         <div class="wrapper page1">
             <div class="container">
 
-                <div class="nested">
-                    <div class="">btn</div>
-                    <div class="">
-                        content
-                    </div>
+                <div class="img">
+                    <img class="lazyload" data-original="img/test-high.jpg" src="img/test-high.jpg" alt="">
                 </div>
-                                                            
 
+                <div class="img">
+                    <img class="lazyload" data-original="img/test-wide.jpg" src="img/test-wide.jpg" alt="">
+                </div>
+
+                <div class="img">
+                    <img class="lazyload" data-original="img/test-same.jpg" src="img/test-same.jpg" alt="">
+                </div>
+            
             </div>
         </div>
 
@@ -43,7 +47,9 @@
         <script src="libs/luxy.min.js"></script>
         <script src="libs/mCustomScrollbar.concat.min.js"></script>
         <script src="libs/matchHeight-min.js"></script>
+        <script src="libs/masonry.min.js"></script>
         <script src="libs/wow.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
         <script src="script.js"></script>
     </body>
 
