--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 
-        <div class="top-section">
+        <div class="top-section" id="sticky">
             <div class="container">
                 <div class="flex-wrap">
                     <div class="simple-input">
@@ -4388,6 +4388,7 @@ $('ul').mCustomScrollbar({
     <script src="libs/datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js"></script>
     <script src="libs/luxy.min.js"></script>
+    <script src="libs/sticky.js"></script>
     <script src="libs/wow.min.js"></script>
     <script src="libs/mCustomScrollbar.concat.min.js"></script>
     <script src="script.js"></script>
