--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="libs/fancybox.min.css">
     <link rel="stylesheet" href="libs/datepicker.min.css">
     <link rel="stylesheet" href="libs/loaders.min.css">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
