--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
     <div class="to-top"></div>
 
 
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="preloader-inner">
             <svg class="load-svg" version="1.1" id="L2" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100"
@@ -43,7 +43,7 @@
                 </line>
             </svg>
         </div>
-    </div>
+    </div> -->
 
     <div class="size-locker">
         <div class="size-locker-text">
